// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rendering snapshots should render valid snapshot 1`] = `
<Style
  className="breadcrumb-wrapper"
>
  <Route
    component={[Function]}
    isLoadingIconVisible={false}
    path="/:path"
  />
</Style>
`;

exports[`rendering snapshots should render valid snapshot when loading icon visible 1`] = `
<Style
  className="breadcrumb-wrapper"
>
  <div
    className="float-right"
    data-spec="header-loading-indicator"
  >
    <Component
      className="invert"
    />
  </div>
  <Route
    component={[Function]}
    isLoadingIconVisible={true}
    path="/:path"
  />
</Style>
`;
